TAG: pgmgddbschema-?
DATE: 05/11/2016
STAFF: lec
CHANGES:
TR6939/replace genotype in assay data" 
1) procedure/GXD_replaceGenotype
2) view/GXD_Genotype_Acc_View

TAG: pgmgddbschema-6-0-4-2
TAG: pgmgddbschema-6-0-4-1
DATE: 05/05/2016
STAFF: lec
CHANGES:
TR12223/gxd anatomy II : merge to trunk

TAG: pgmgddbschema-tr12223-1
DATE: 01/07/2016, 05/04/2016
STAFF: lec
CHANGES:
TR12223/gxd anatomy II
#####
obsolete:
GXD_StructureClosure
GXD_Structure
GXD_StructureName
MGI_EMAPS_Mapping
MGI_Organism_Homology_View
MAP_Feature_View
MRK_Types_Summary_View
ALL_Allele_Strain_View
ALL_CellLine_Strain_View
BIB_Summary_View
GXD_Antibody_Summary_View
GXD_Assay_Summary_View
PRB_Summary_View
VOC_InterPro_Summary_View
VOC_Term_Gender_View
VOC_Term_SegmentType_View
VOC_Vocab_DAG_Summary_View
VOC_Vocab_Summary_View
MGI_Organism_Antibody_View
MGI_Synonym_HumMarker_View
MGI_TranslationType_View
MGI_User_Active_View
######
conversion:
  add _Stage_key
  rename _Structure_key -> _EMAPA_Term_key (VOC_Term_EMAPA)

ALL_Cre_Cache
GXD_Expression
GXD_GelLaneStructure
GXD_ISResultStructure
MGI_SetMember
procedure/GXD_duplicateAssay
######
VOC_Term_EMAPA
- change startStage/endStage to int
VOC_Term_EMAPS
-- rename/change "stage" to _Stage_key/int
and foreign key them to the GXD_TheilerStage table
######
added:
table/MGI_SetMember_EMAPA_create.object
procedure/GXD_addEMAPASet_create.object
index/added extra (lower) indexes
######
update:
MRK_OMIM_Cache
#####
TR12314/remove wild-type alleles
procedure/MRK_mergeWithdrawal_create.object 
procedure/MRK_deleteWithdrawal_create.object

TAG: pgmgddbschema-tr12223-BP
DATE: 01/07/2016
STAFF: lec
CHANGES:
1) branch point tag for TR12223
gxd_structure->voc_term_emapa conversion

TAG: pgmgddbschema-6-0-2-8
TAG: pgmgddbschema-6-0-2-7
DATE: 01/06/2016
STAFF: lec 
CHANGES:
1) index/ALL_CellLine_Derivation
add indexes to _vector_key & _vectortype_key
2) index/MGI_NoteChunk ; comment out note index

TAG: pgmgddbschema-6-0-2-6
DATE: 12/14/2015
STAFF: lec 
CHANGES: