@@ -22,27 +22,3 @@ fi
 LOGFILE=${PG_MGD_DBSCHEMADIR}/logs
 export LOGFILE
 
-EXPORTDATA=${DATALOADSOUTPUT}/mgi/pgmgddbschema/data
-EXPORTLOGS=${DATALOADSOUTPUT}/mgi/pgmgddbschema/logs
-# LOGDIR is used by pgdbutilities/bin/bcpin.csh
-LOGDIR=${EXPORTLOGS}
-export EXPORTDATA EXPORTLOGS LOGDIR
-
-#
-# 0 : do not run sybase/bcpout.csh
-# 1 : run sybase/bcpout.csh
-# data files are saved in EXPORTDATA
-# 
-runBCP=0
-export runBCP
-
-#
-# number of mutliple tasks to run
-counterMax=3
-export counterMax
-
-#
-# number of mutliple tasks to run
-counterMax=3
-export counterMax
-
