@@ -11,6 +11,6 @@ cat - <<EOSQL | ${PG_DBUTILS}/bin/doisql.csh $0
 
 CLUSTER mgd.BIB_Notes USING BIB_Notes_pkey;
 
-create index BIB_Notes_idx_note on mgd.BIB_Notes (note);
+--create index BIB_Notes_idx_note on mgd.BIB_Notes (note);
 
 EOSQL
