@@ -8,6 +8,7 @@ cat - <<EOSQL | ${PG_DBUTILS}/bin/doisql.csh $0
 ALTER TABLE mgd.GXD_Expression DROP CONSTRAINT GXD_Expression__AssayType_key_fkey CASCADE;
 
 ALTER TABLE mgd.GXD_Assay DROP CONSTRAINT GXD_Assay__AssayType_key_fkey CASCADE;
+
 ALTER TABLE mgd.GXD_AssayType DROP CONSTRAINT GXD_AssayType_pkey CASCADE;
 
 EOSQL
